fix フェーズ４
